# pyrate

./: .gitignore  .gitpod.yml  README.md  pyrate-system.yaml
api/pyrate/: Dockerfile  docker-compose.yml  pyproject.toml  variables.env
api/pyrate/pyrate/: app.db  app.py  client_app.py  client_wsgi.py  db.py  external_wsgi.py  internal_app.py  internal_wsgi.py  pyrate.py  supervisord.conf  wsgi.py
api/pyrate/pyrate/migrations/versions/: 4f4f71c50c45_initial_migration_x4.py  a690bdddc98b_initial_migration_x3.py
api/pyrate/pyrate/models/: User.py
api/pyrate/pyrate/services/__internals__/: commons.py  db_config.py  env.py  model_utils.py  models.py  pyrate.py  query.py  routes.py  service.py  service_utils.py  sql_alchemy_model_parser.py  utils.py
api/pyrate/pyrate/services/gregory/: __model__.json  routes.py  service.py
api/pyrate/pyrate/services/gregorypark/: __model__.json  routes.py  service.py
api/pyrate/pyrate/services/product/: routes.py  service.py
api/pyrate/pyrate/services/user/: __model__.json  attributes.py  model.py  routes.py  service.py
api/pyrate/tests/: test_pyrate.py
app/: package.json
app/pyrate/: Dockerfile  docker-compose.yml  package-lock.json  package.json  types.ts
app/pyrate/components/: BasicTable.tsx  CreateModelForm.tsx  DetailsCard.tsx  DetailsCardForm.tsx  DetailsPageSettings.tsx  GenericForm.tsx  GenericModal.tsx  GenericTable.tsx  LocalSideBarLayout.tsx  SettingsIcon.tsx  SideBar.tsx  SideBarLayout.tsx  SidebarMenu.tsx  Table.tsx
app/pyrate/context/: MenuContext.tsx
app/pyrate/data/: constants.ts  (+1 more)
docs/: index.md
(+16 files in other folders)
